<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_first">

    <fragment
        android:id="@+id/navigation_first"
        android:name="mtg.java.mymagicapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/navigation_second" />
        <action
            android:id="@+id/action_navigation_first_to_navigation_third"
            app:destination="@id/navigation_third" />
    </fragment>
    <fragment
        android:id="@+id/navigation_second"
        android:name="mtg.java.mymagicapp.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/navigation_first" />
        <action
            android:id="@+id/action_navigation_second_to_navigation_third"
            app:destination="@id/navigation_third" />
    </fragment>
    <fragment
        android:id="@+id/navigation_third"
        android:name="mtg.java.mymagicapp.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/navigation_first" />
        <action
            android:id="@+id/action_navigation_third_to_navigation_second"
            app:destination="@id/navigation_second" />
    </fragment>
</navigation>